--- a/client/src/components/ChatPage.css
+++ b/client/src/components/ChatPage.css
@@ -1,13 +1,11 @@
-* {
+* , button{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-button{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
   color: #fff;
   height: 100vh;
   background: whitesmoke;
