--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -199,6 +199,29 @@ ul {
   );
 }
 
+.go_back_btn{
+  padding: 1.5rem 2rem;
+  border-radius: 2rem;
+  outline: 0;
+  border: 0;
+  font-size: 1.2rem;
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  /* box-shadow: 0 0 20px #eee; */
+  border-radius: 10px;
+  display: block;
+  background-image: linear-gradient(
+    to right,
+    #130f40 0%,
+    #28235e 51%,
+    #2b284c 100%
+  )};
+
 .emoji_btn {
   background-color: inherit;
   border: 2px solid #000;
@@ -332,13 +355,13 @@ body{
 }
 
 .boxes{
-  background: rgba(255, 255, 255, 0.46);
-  border-radius: 16px;
+  background: rgba(255, 255, 255, 0.489);
+  border-radius: 10px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(4.9px);
   -webkit-backdrop-filter: blur(4.9px);
 
-
+  
   max-width: 48vh;
   display: flex;
   flex-direction: column;
@@ -370,11 +393,11 @@ button , input{
 
 
 
- 
+
 #Authen{
 
   background: rgba(255, 255, 255, 0.46);
-  border-radius: 16px;
+  border-radius: 10px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(4.9px);
   -webkit-backdrop-filter: blur(4.9px);
